crates/ui/tests/snapshots/panel_snapshots__reports_screen__reports_snapshot__detail_error_dark.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: "reports_summary(&st, ThemeMode::Dark)"
---
screen: reports
theme: Dark
picker_title: Backtest reports
picker_rows:
  [v0-paper-sma · backtest-20260418-090000-btc-sma] active color=accent(dark) bg=panel_raised
  [v05-composed-strategies · backtest-20260420-152017-btc-rsi] inactive color=fg_muted
detail:
  state: error copy=This report could not be read — it may have been moved or its summary table is malformed.
