crates/ui/tests/snapshots/panel_snapshots__reports_screen__reports_snapshot__empty_list_dark.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: "reports_summary(&st, ThemeMode::Dark)"
---
screen: reports
theme: Dark
picker_title: Backtest reports
picker_rows:
  empty: No backtest reports found in spec/ yet.
detail:
  state: prompt copy=Select a report to view its results.
